Dont force proxy generation for javax.* classes
see #1559

see #1326