@@ -9,17 +9,10 @@ subprojects {
 
     application {
         mainClass = "org.joinfaces.test.JoinfacesTestApplication"
-        applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
     }
 
     tasks.withType(Javadoc).configureEach {
         enabled = false
-    }
-
-    tasks.withType(Test).configureEach {
-        if (JavaVersion.current().java11Compatible) {
-            jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED"])
-        }
     }
 
     dependencies {
